--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
             </p>
         </section>
     </main>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside>
+        <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gear icon with a funnel leading to cash"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Lightbulb wearing a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A gear icon surrounded by money"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
